Working on mouseover AND mousedown function

--- a/style.css
+++ b/style.css
@@ -1,10 +1,47 @@
+body {
+    display: block;
+    text-align: center;
+}
+
+/*Grid CSS*/
 #grid-container {
     display: grid;
     width: 500px;
     height: 500px;
-    position: absolute;
+    grid-gap: 2px;
+    margin: 20px auto;
 }
 
 .gridCell {
-    border: 1px solid black;
+    border: .5px solid black;
+    border-radius: 5px;
+    transition: 0.3s;
+}
+.gridCell:hover {
+    background-color: rgb(0, 0, 0);
+}
+
+/*Control Buttons CSS*/
+#buttons {
+    display: inline-flex;
+    flex-direction: row;
+    margin: 10px 15%;
+}
+
+.button {
+    background-color: yellow;
+    flex-grow: 1;
+    flex-basis: 0;
+    padding: 10px;
+    margin: 0 5px;
+    border-radius: 10px;
+}
+
+.button > span {
+    margin: 0 auto;
+}
+
+.button:hover {
+    transform: scale(1.1);
+    background-color: gray;
 }
