--- a/style.css
+++ b/style.css
@@ -1,6 +1,20 @@
 body {
-    display: block;
     text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    background: linear-gradient(135deg, rgb(204, 145, 253), rgb(169, 220, 250));
+    height: 100%;
+    width: 100%;
+    padding-bottom: 100px;
+}
+
+/*Title*/
+h1 {
+    font-size: 48px;
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 
 /*Grid CSS*/
@@ -10,38 +24,39 @@ body {
     height: 500px;
     grid-gap: 2px;
     margin: 20px auto;
+    background-color: white;
+    border-radius: 20px;
+    padding: 20px;
 }
 
 .gridCell {
-    border: .5px solid black;
-    border-radius: 5px;
+    border: 1px transparent black;
+    border-radius: 25px;
     transition: 0.3s;
 }
 .gridCell:hover {
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(175, 170, 170);
 }
 
 /*Control Buttons CSS*/
 #buttons {
+    border: 1px solid black;
     display: inline-flex;
     flex-direction: row;
     margin: 10px 15%;
 }
 
 .button {
-    background-color: yellow;
     flex-grow: 1;
     flex-basis: 0;
     padding: 10px;
     margin: 0 5px;
-    border-radius: 10px;
-}
-
-.button > span {
-    margin: 0 auto;
 }
 
 .button:hover {
-    transform: scale(1.1);
-    background-color: gray;
+    color: white;
+    cursor: pointer;
 }
+.button:active {
+    transform: translateY(1px);
+  }
