--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h1 {
 }
 
 .gridCell {
-    border: 1px transparent black;
+    border: 1px solid rgb(240, 233, 233);
     border-radius: 25px;
     transition: 0.3s;
 }
